agregue un icono de casita y al darle click lleva siempre a la pag principal-los modulos estan linqueados a la pag principal

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header> <!-- encabezado  -->
         <nav class="navbar">
             <div class="navbar-left">
-            <img src="assets/logo2.png" alt="logo etc">
+            <img src="assets/logo.png" alt="logo etc">
             </div>
 
             <div class="navbar-center">
@@ -22,7 +22,7 @@
             <div class="navbar-right">
             <button tittle="notificaciones"><i class="fa-solid fa-bell"></i></button>
             <button tittle="mensajes"><i class="fa-solid fa-comment"></i></button>
-            <button tittle="menu"><i class="fa-solid fa-circle-user"></i></button>
+            <a href="../index.html" class="icono-boton" title="Ir al inicio"><i class="fa-solid fa-house-chimney"></i></a>
             </div>
         </nav>
             <div class="divider"></div>
@@ -66,15 +66,23 @@
                 <h3>Modulo 5</h3>
                 <p>Descripción o contenido informativo de este módulo</p>
             </div>
+            <div>
+
+            </div>
         </section>
     </main>
+    
         <div class="divider"></div>
+
     <footer class="footer"> <!--  pie de pagina -->
+    <div class="footer-container">
     <div class="footer-content">
 
    
     <div class="footer-info">
-      <p><strong>Emprende Tu Carrera</strong>. Emprende Tu Carrera es una agencia de educación superior en Colombia, especializada en conectar estudiantes con las mejores opciones académicas. Ofrecemos orientación personalizada para seleccionar programas universitarios y técnicos.</p>
+      <p><strong>Emprende Tu Carrera</strong>. Emprende Tu Carrera es una agencia de educación superior en Colombia, 
+        <br>especializada en conectar estudiantes con las mejores opciones académicas. 
+        <br> Ofrecemos orientación personalizada para seleccionar programas universitarios y técnicos.</p>
       <p><strong>Dirreccion:</strong> Calle 67 #8-12, Oficina 102</p>
       <p><strong>Contacto:</strong> 311 818 5099 &nbsp;&nbsp;</p>
       <strong>Correo:</strong> emprendetucarrera.com.co/</p>
@@ -94,7 +102,7 @@
         <img src="assets/tiktok.png" alt="TikTok" class="icono-imagen"></a></li>
       </ul>
     </div>
-
+    </div>
   </div>
   </footer>
 </body>
