--- a/pages/modulo5.html
+++ b/pages/modulo5.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>capacitacionesETC</title>
-    <link rel="stylesheet" href="css/style.css"> <link rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css"> <link rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <header> <!-- encabezado  -->
         <nav class="navbar">
             <div class="navbar-left">
-            <img src="assets/logo2.png" alt="logo etc">
+            <img src="../assets/logo.png" alt="logo etc">
             </div>
 
             <div class="navbar-center">
@@ -22,8 +22,42 @@
             <div class="navbar-right">
             <button tittle="notificaciones"><i class="fa-solid fa-bell"></i></button>
             <button tittle="mensajes"><i class="fa-solid fa-comment"></i></button>
-            <button tittle="menu"><i class="fa-solid fa-circle-user"></i></button>
+            <a href="../index.html" class="icono-boton" title="Ir al inicio"><i class="fa-solid fa-house-chimney"></i></a>
             </div>
         </nav>
             <div class="divider"></div>
     </header>
+
+    <footer class="footer"> <!--  pie de pagina -->
+       <div class="footer-container">
+       <div class="footer-content">
+
+   
+        <div class="footer-info">
+            <p><strong>Emprende Tu Carrera</strong>. Emprende Tu Carrera es una agencia de educación superior en Colombia, 
+            <br>especializada en conectar estudiantes con las mejores opciones académicas. 
+            <br> Ofrecemos orientación personalizada para seleccionar programas universitarios y técnicos.</p>
+            <p><strong>Dirreccion:</strong> Calle 67 #8-12, Oficina 102</p>
+            <p><strong>Contacto:</strong> 311 818 5099 &nbsp;&nbsp;</p>
+            <strong>Correo:</strong> emprendetucarrera.com.co/</p>
+        </div>
+
+    
+        <div class="footer-contact">
+            <h4>Contáctenos</h4>
+            <ul>
+            <li><a href="https://emprendetucarrera.com.co/" target="_blank" title="PaginaETC">
+            <img src="../assets/email.png" alt="paginaetc" class="icono-imagen"></a></li>
+            <li><a href="https://www.facebook.com" target="_blank" title="Facebook">
+            <img src="../assets/facebook.png" alt="Facebook" class="icono-imagen"></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" title="Instagram">
+            <img src="../assets/instagram.png" alt="Instagram" class="icono-imagen"></a></li>
+            <li><a href="https://www.tiktok.com" target="_blank" title="TikTok">
+            <img src="../assets/tiktok.png" alt="TikTok" class="icono-imagen"></a></li>
+            </ul>
+        </div>
+      </div>
+      </div>
+    </footer>
+</body>
+</html> 
