se cambiaron los iconos y se linqueron con las paginas correspondientes de la empresa- se agrego el mapa- se agrego cuadro de contenido-esta pendiente el tema del footer que en todos los html se vea igual

--- a/pages/modulo5.html
+++ b/pages/modulo5.html
@@ -28,15 +28,18 @@
             <div class="divider"></div>
     </header>
 
+    <body>
+        <div class="recuadro-info">
+            <p>Cuando se tenga la información irá aquí</p>
+        </div>
+    </body>
+
     <footer class="footer"> <!--  pie de pagina -->
-       <div class="footer-container">
-       <div class="footer-content">
+        <div class="footer-container">
+        <div class="footer-content">
 
    
         <div class="footer-info">
-            <p><strong>Emprende Tu Carrera</strong>. Emprende Tu Carrera es una agencia de educación superior en Colombia, 
-            <br>especializada en conectar estudiantes con las mejores opciones académicas. 
-            <br> Ofrecemos orientación personalizada para seleccionar programas universitarios y técnicos.</p>
             <p><strong>Dirreccion:</strong> Calle 67 #8-12, Oficina 102</p>
             <p><strong>Contacto:</strong> 311 818 5099 &nbsp;&nbsp;</p>
             <strong>Correo:</strong> emprendetucarrera.com.co/</p>
@@ -46,18 +49,19 @@
         <div class="footer-contact">
             <h4>Contáctenos</h4>
             <ul>
-            <li><a href="https://emprendetucarrera.com.co/" target="_blank" title="PaginaETC">
-            <img src="../assets/email.png" alt="paginaetc" class="icono-imagen"></a></li>
-            <li><a href="https://www.facebook.com" target="_blank" title="Facebook">
-            <img src="../assets/facebook.png" alt="Facebook" class="icono-imagen"></a></li>
-            <li><a href="https://www.instagram.com" target="_blank" title="Instagram">
-            <img src="../assets/instagram.png" alt="Instagram" class="icono-imagen"></a></li>
-            <li><a href="https://www.tiktok.com" target="_blank" title="TikTok">
-            <img src="../assets/tiktok.png" alt="TikTok" class="icono-imagen"></a></li>
+                <li><a href="https://emprendetucarrera.com.co/" target="_blank" title="PaginaETC">
+                <img src="https://img.icons8.com/?size=100&id=Fs3WQI89bw1R&format=png&color=FFFFFF" alt="paginaetc" class="icono-imagen"></a></li>
+                <li><a href="https://www.facebook.com/share/14DpyXsSfFk/?mibextid=wwXIfr" target="_blank" title="Facebook">
+                <img src="https://img.icons8.com/?size=100&id=LL0Q6sp9VyLo&format=png&color=FFFFFF" alt="Facebook" class="icono-imagen"></a></li>
+                <li><a href="https://www.instagram.com/emprendetucarrera?igsh=bnhvd3hyMWxpNms3" target="_blank" title="Instagram">
+                <img src="https://img.icons8.com/?size=100&id=RhYNENh5cxlS&format=png&color=FFFFFF" alt="Instagram" class="icono-imagen"></a></li>
+                <li><a href="https://www.tiktok.com/@emprendetucarrera?_t=ZS-8yH6kaQAj03&_r=1" target="_blank" title="TikTok">
+                <img src="https://img.icons8.com/?size=100&id=K6KK5ISTAWwE&format=png&color=FFFFFF" alt="TikTok" class="icono-imagen"></a></li>
             </ul>
         </div>
-      </div>
-      </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.6772401134585!2d-74.0618058243239!3d4.651530542080405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9b811f6acfa1%3A0x307478636c72463a!2sEmprende%20Tu%20Carrera!5e0!3m2!1ses-419!2sco!4v1753301258913!5m2!1ses-419!2sco" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        </div>
     </footer>
 </body>
 </html> 
