se ajusto mejor el footer-se corrijieron errores en el codigo

--- a/pages/modulo1.html
+++ b/pages/modulo1.html
@@ -28,11 +28,11 @@
             <div class="divider"></div>
     </header>   
 
-    <body>
+    <main>
         <div class="recuadro-info">
             <p>Cuando se tenga la información irá aquí</p>
         </div>
-    </body>
+    </main>
 
 
 
@@ -45,7 +45,7 @@
         <div class="footer-info">
             <p><strong>Dirreccion:</strong> Calle 67 #8-12, Oficina 102</p>
             <p><strong>Contacto:</strong> 311 818 5099 &nbsp;&nbsp;</p>
-            <strong>Correo:</strong> emprendetucarrera.com.co/</p>
+            <p><strong>Correo:</strong> emprendetucarrera.com.co/</p>
         </div>
 
     
@@ -63,7 +63,7 @@
             </ul>
         </div>
             <div class="maps">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.6772401134585!2d-74.0618058243239!3d4.651530542080405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9b811f6acfa1%3A0x307478636c72463a!2sEmprende%20Tu%20Carrera!5e0!3m2!1ses-419!2sco!4v1753301258913!5m2!1ses-419!2sco" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.6772401134585!2d-74.0618058243239!3d4.651530542080405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9b811f6acfa1%3A0x307478636c72463a!2sEmprende%20Tu%20Carrera!5e0!3m2!1ses-419!2sco!4v1753301258913!5m2!1ses-419!2sco" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>z
             </div>
         </div>
         </div>
