--- a/pages/modulo2.html
+++ b/pages/modulo2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>capacitacionesETC</title>
-    <link rel="stylesheet" href="../css/style.css""> <link rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -28,11 +28,11 @@
             <div class="divider"></div>
     </header>
 
-    <body>
+    <main>
         <div class="recuadro-info">
             <p>Cuando se tenga la información irá aquí</p>
         </div>
-    </body>
+    </main>
 
 
 
@@ -44,7 +44,7 @@
         <div class="footer-info">
             <p><strong>Dirreccion:</strong> Calle 67 #8-12, Oficina 102</p>
             <p><strong>Contacto:</strong> 311 818 5099 &nbsp;&nbsp;</p>
-            <strong>Correo:</strong> emprendetucarrera.com.co/</p>
+            <p><strong>Correo:</strong> emprendetucarrera.com.co/</p>
         </div>
 
     
