--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>capacitacionesETC</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -20,9 +20,9 @@
             </div>
         
             <div class="navbar-right">
-            <button tittle="notificaciones"><i class="fa-solid fa-bell"></i></button>
-            <button tittle="mensajes"><i class="fa-solid fa-comment"></i></button>
-            <a href="../index.html" class="icono-boton" title="Ir al inicio"><i class="fa-solid fa-house-chimney"></i></a>
+            <button title="notificaciones"><i class="fa-solid fa-bell"></i></button>
+            <button title="mensajes"><i class="fa-solid fa-comment"></i></button>
+            <a href="index.html" class="icono-boton" title="Ir al inicio"><i class="fa-solid fa-house-chimney"></i></a>
             </div>
         </nav>
             <div class="divider"></div>
@@ -81,7 +81,7 @@
         <div class="footer-info">
             <p><strong>Dirreccion:</strong> Calle 67 #8-12, Oficina 102</p>
             <p><strong>Contacto:</strong> 311 818 5099 &nbsp;&nbsp;</p>
-            <strong>Correo:</strong> emprendetucarrera.com.co/</p>
+            <p><strong>Correo:</strong> emprendetucarrera.com.co/</p>
         </div>
 
     
